--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "issues": "https://github.com/oat-sa/lib-tao-dtms/issues"
     },
     "require": {
-        "php" : ">=5.3.0"
+        "php" : "^7.4 || ~8"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*"
